Jagdish/card fixes (#132)
* fix: NFT height fixes

* fix: NFT aspect ratio

* fix: font weightage for gas switcher

* fix: removing icon from profile menu

* fix: truncate large text

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -505,6 +505,40 @@
 .gasFeesLabel{
   @include setFont(var(--font-type-2), normal, 700, 14px, 17px, var(--inactive-gray));
 }
+#gasPriceToggleButton{
+  .toggleOption{
+    color: var(--mantle-off-white);
+    &:hover{
+      color: var(--card-color);
+      .gasPricePriority{
+        font-weight: bold;
+      }
+      .gasCharges,.gasChargesPrice{
+        color: var(--card-color);
+      }
+    }
+    &.active{
+      color: var(--card-color);
+      .gasPricePriority{
+        font-weight: bold;
+      }
+      .gasCharges,.gasChargesPrice{
+        color: var(--card-color);
+      }
+    }
+    .gasPricePriority{
+      font-size: 14px;
+      font-weight: bold;
+      line-height: 22px;
+    }
+    .gasCharges,.gasChargesPrice{
+      font-size: 12px;
+      font-weight: 400;
+      color: var(--gray);
+      line-height: 14px;
+    }
+  }
+}
 
 // Horizontal Switcher
 .nav{
